--- a/main.css
+++ b/main.css
@@ -405,6 +405,13 @@ body {
   max-width: 1280px;
   margin-right: auto;
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .start {
@@ -527,7 +534,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   min-width: 304px;
-  min-height: 72px;
+  height: 72px;
   padding: 10px 40px;
   background-color: #ffd500;
   text-decoration: none;
@@ -582,9 +589,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100px;
-            flex: 0 1 100px;
+    width: 100px;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -604,6 +611,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    width: 40%;
+    -ms-flex-negative: 2;
+        flex-shrink: 2;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -611,9 +621,6 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 2 40%;
-            flex: 0 2 40%;
   }
 
 .commission__zero {
@@ -629,9 +636,9 @@ body {
 
 .commission__right {
     font-size: 40px;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
+    width: 50%;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
     padding-right: 56px;
     padding-left: 20px;
   }
@@ -648,6 +655,8 @@ body {
 }
 
     .commission__right {
+      display: block;
+      width: 100%;
       padding: 20px 0 0;
       text-align: center;
       font-size: 22px;
@@ -657,8 +666,15 @@ body {
       display: none;
     }
 
+    .commission__mid {
+      display: block;
+      width: 100%;
+    }
+
     .commission__zero {
-      max-width: 70%;
+      max-width: 55%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .commission__zero-text {
